# geschenke

./: .env  .travis.yml  Cargo.toml  README.md  Rocket.toml  dockerfile  dump_db.sh  inject_db.sh  test_db.sql
frontend/: Cargo.toml
frontend/src/: main.rs
localization/: de-DE  en-US
migrations/2018-01-13-153215_table_setup/: down.sql  up.sql
migrations/2018-04-15-170104_rename_obtained_date_to_reserved_date/: down.sql  up.sql
migrations/2018-04-15-181546_rename_receiver_to_recipient/: down.sql  up.sql
migrations/2018-04-15-191445_rename_geschenk_to_present/: down.sql  up.sql
migrations/2018-04-16-163349_no_dupe_short_descriptions/: down.sql  up.sql
migrations/2018-04-17-190847_present_must_have_both_gifter_and_reserved_date_or_neither/: down.sql  up.sql
src/: api.rs  index.html  lib.rs  mail.rs  main.rs  models.rs  pool.rs  schema.rs
src/api/: account.rs  debugging.rs  geschenk.rs  index.html  logged_in.rs  mod.rs  present.rs  registration.rs  user.rs
src/ui/: localization.rs  mod.rs
