[package]
name = "geschenke"
version = "0.1.0"
authors = ["Oliver Schneider <git-no-reply-9879165716479413131@oli-obk.de>"]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4.0", features = ["serde"] }
sha3 = "0.7.2"
rand = "0.4.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0.27"
