[package]
authors = ["Oliver Schneider <git-no-reply-9879165716479413131@oli-obk.de>"]
name = "geschenke"
version = "0.1.0"

[dependencies]
dotenv = "0.9.0"
email-format = { version = "0.6.0", features = ["chrono"] }
horrorshow = { git = "https://github.com/Stebalien/horrorshow-rs.git" }
mailstrom = "0.4.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rand = "0.4.2"
rocket = { version = "0.3.6", features = ["tls"] }
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0"
serde_derive = "1.0.27"
sha3 = "0.7.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
]
version = "1.0.0"
